components/mangaPage/style/mangainfo.module.css
.info {
  margin: auto;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  max-width: 1120px;
  width: 100%;
  padding: 24px;
  gap: 40px;
  background: #1e1e1e;
  border-radius: 5px;
}

.infoSection2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 32px;
}

.infoSection2 > h2 {
  font-size: 32px;
  font-style: normal;
  font-weight: 400;
}

.infoSection2 > p {
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
}

.catSection {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  gap: 32px;
  max-width: 684px;
}

.catSection > p {
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
}

.statusContainer {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
}

.status,
.firstChapterBtn {
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
  padding: 10px;
  background: #d100b2;
  border-radius: 5px;
  cursor: pointer;
  user-select: none;
}

.iconText {
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
}

.btns {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  gap: 80px;
  width: 950px;
}

.btns > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 32px;
}

.story {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 24px;
  gap: 32px;
  max-width: 1060px;
  width: 100%;
  max-height: 408px;
  background: #1e1e1e;
  border-radius: 5px;
}

.story > p {
  font-size: 20px;
  font-style: normal;
  font-weight: 400;
}

.storyHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  cursor: pointer;
}

.storyHeader > p {
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  text-decoration: underline;
}

.storyShowLess {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  line-clamp: 5;
  -webkit-line-clamp: 5;
  white-space: pre-wrap;
}

@media screen and (max-width: 770px) {
  .imageContainer {
    width: 97px !important;
    height: 131px !important;
    flex-shrink: 0;
  }

  .info {
    gap: 16px;
    flex-wrap: wrap;
  }

  .infoSection2 {
    flex: 1;
    min-width: 220px;
  }
  .infoSection2,
  .catSection {
    gap: 8px;
  }

  .infoSection2 > h2 {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }

  .catSection > p,
  .infoSection2 > p,
  .status,
  .firstChapterBtn {
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
  }

  .btns {
    width: 100%;
    gap: 0;
    justify-content: space-evenly;
  }

  .btns > div {
    gap: 16px;
  }

  .iconText {
    font-size: 16px;
  }

  .iconText > span {
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
  }

  .icon,
  .rateContainer > span {
    width: 16px !important;
    height: 16px !important;
  }

  .storyHeader > p {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
  }

  .story > p {
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
  }
}

